fix(web语义化开始): 开始尝试使用更加web语义化的标签
html5 语义化标签

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -10,6 +10,7 @@ article,
 ul,
 dl,
 dt,
+cite,
 dd,
 li,
 a,
@@ -50,6 +51,10 @@ figcaption {
 html,
 body {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+del {
+    color: #949497;
 }
 
 input {
